--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@
 /examples/pingpong/*.o
 /examples/http/*.o
 /examples/rpc/*.o
+/examples/rpc/*.pb.*
 /test/*.o
 /rpc/protobuf/*.o
 /rpc/protorpc/*.o
+/rpc/protorpc/*.pb.*
 test*
 /raft/test*
 /raft/*.o
+/raft/*.pb.*
 /unit_test/*.o
 .vscode/
 test_storage/
